# VideoLabel

./: CMakeLists.txt  README.md  main.cpp  threadLabel.cpp  threadLabel.hpp
